--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9348,5 +9348,15 @@
         </target>
       </segment>
     </unit>
+    <unit id="nVu0Gxq">
+      <notes>
+        <note category="german">Vorsicht, zu viel Musik ist schädlich, und einer deiner Mitbürger hat dieses Instrument heute bereits benutzt. Deine Ohren würden das nicht überleben.</note>
+        <note category="from">db://Requirement</note>
+      </notes>
+      <segment>
+        <source>Vorsicht, zu viel Musik ist schädlich, und einer deiner Mitbürger hat dieses Instrument heute bereits benutzt. Deine Ohren würden das nicht überleben.</source>
+        <target>Attention, trop de chanson tue la chanson, et un de vos concitoyen a déjà utilisé cet instrument aujourd'hui. Vos oreilles ne survivraient pas.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
