--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -22813,5 +22813,16 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target><![CDATA[Du hast das Wasser aus {item} in den Brunnen geschüttet (<strong>+1 Einheit</strong>)]]></target>
       </segment>
     </unit>
+    <unit id="IvzsLJB">
+      <notes>
+        <note category="german">Unsere aktuelle Schätzung ist zu ungenau, um brauchbar zu sein: Wir brauchen mehr Bürger, die auf den Turm gehen!</note>
+        <note category="from">twig:///templates/ajax/game/town/watchtower.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Unsere aktuelle Schätzung ist zu ungenau, um brauchbar zu sein: Wir brauchen mehr Bürger, die auf den Turm gehen!</source>
+        <target>Unsere aktuelle Schätzung ist zu ungenau, um brauchbar zu sein: Wir brauchen mehr Bürger, die auf den Turm gehen!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
